--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gilmore Jump</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="style.css">
 </head>
 <body>
-    <script src='script.js'></script>
+    <canvas id="canvas" width="800" height="900"></canvas>
+    <h1>Gilmore Jump</h1>
+    <div>
+    <p><h3>Instructions</h3>
+    Rory and Logan are about to jump off from a high tower holding on to an umbrella.</p> 
+    <p>Help Rory to move sideways by using your left/right arrow keys so she can safely land on the cushion.
+    </p>
+    <button type="button" id="btn-start" class="btn btn-light">Start</button>
+    <button type="button" id="restart" class="btn btn-dark">Play again</button>
+    </div>
+    <script src='main.js'></script>
+    <script src='game.js'></script>
+    <script src='jumper.js'></script>
+    <script src='cushion.js'></script>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+</script>
 </body>
 </html>
