finally something moves

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link href="style.css">
 </head>
 <body>
-    <canvas id="canvas" width="800" height="900"></canvas>
     <h1>Gilmore Jump</h1>
+    <canvas id="canvas" width="800" height="900"></canvas>
+    
     <div>
     <p><h3>Instructions</h3>
     Rory and Logan are about to jump off from a high tower holding on to an umbrella.</p> 
     <p>Help Rory to move sideways by using your left/right arrow keys so she can safely land on the cushion.
     </p>
-    <button type="button" id="btn-start" class="btn btn-light">Start</button>
+    <button type="button" id="btn-start" class="btn btn-light">Start Game</button>
     <button type="button" id="restart" class="btn btn-dark">Play again</button>
     </div>
     <script src='jumper.js'></script>
