--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gilmore Jump</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="style.css">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Gilmore Jump</h1>
-    <canvas id="canvas" width="800" height="900"></canvas>
-    
+    <h1>Jump</h1>
+    <section class="splash">
+      <div class="container">
+        <h3>Instructions</h3>
+        <p>Rory and Logan are about to jump off</p> 
+        <p>from a high tower</p> 
+        <p>holding on to an umbrella.</p> 
+        <p>Help them to move sideways</p> 
+        <p>by using your left/right arrow keys</p> 
+        <p>so they can safely land on the cushion.</p>
+      </div>
+      <div>
+        <button type="button" id="btn-start" class="btn btn-light">Start Game</button>
+      </div>
+    </section>
     <div>
-    <p><h3>Instructions</h3>
-    Rory and Logan are about to jump off from a high tower holding on to an umbrella.</p> 
-    <p>Help Rory to move sideways by using your left/right arrow keys so she can safely land on the cushion.
-    </p>
-    <button type="button" id="btn-start" class="btn btn-light">Start Game</button>
-    <button type="button" id="restart" class="btn btn-dark">Play again</button>
+        <canvas id="canvas" width="800" height="900"></canvas>
+    </div>
+    <div>
+        <button type="button" id="restart" class="btn btn-dark">Play again</button>
     </div>
     <script src='jumper.js'></script>
     <script src='game.js'></script>
