--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <canvas id="canvas" width="800" height="900"></canvas>
     </div>
     <div class="gameover">
+        <p><img src="images/jumpers.png" alt="jumpers" id="couple"></p>
         <button type="button" id="restart" class="btn btn-dark">Play again</button>
     </div>
     <script src='jumper.js'></script>
