--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div>
         <canvas id="canvas" width="800" height="900"></canvas>
     </div>
-    <div class="gameover">
-        <p><img src="images/jumpers.png" alt="jumpers" id="couple"></p>
+    <section class="gameover">
+        <p><img src="images/jumpers.png" alt="jumpers" id="couple"></p><span class=finalscore></span><br>
         <button type="button" id="restart" class="btn btn-dark">Play again</button>
-    </div>
+    </section>
     <script src='jumper.js'></script>
     <script src='main.js'></script>
     <!-- JavaScript Bundle with Popper -->
