--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <p><img src="images/jumpers.png" alt="jumpers" id="couple"></p><span class=finalscore></span><br>
         <button type="button" id="restart" class="btn btn-dark">Play again</button>
     </section>
+    <footer><div class="text card" id="teamcard">
+      <p>This game was created by <span>Georgina Morales</span> with the support of
+      <button class="btn text" id="teamvalor">Team<img src="/images/teamValor.png" alt="Team Valor" class="friendsimg"></button></p>
+    </div> </footer>
     <script src='jumper.js'></script>
     <script src='main.js'></script>
     <!-- JavaScript Bundle with Popper -->
