finding missing image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <footer><div class="text card" id="teamcard">
       <p>This game was created by <span>Georgina Morales</span> with the support of
-      <button class="btn text" id="teamvalor">Team<img src="/images/teamValor.png" alt="Team Valor" class="friendsimg"></button></p>
+      <button class="btn text" id="teamvalor">Team<img src="images/teamValor.png" alt="Team Valor" class="friendsimg"></button></p>
     </div> </footer>
     <script src='jumper.js'></script>
     <script src='main.js'></script>
